sandbox/output
AnagramTest.java:9: error: cannot find symbol
        int actual = Anagram.answer();
                            ^
  symbol:   method answer()
  location: class Anagram
1 error
